# GolemianAutoclick

./: Cargo.toml  README.md  index.html  meta.json  package-lock.json  package.json  vite.config.js
src/: main.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_logic.rs  main.rs  test.rs
ui/: app.js  index.html  styles.css
