[package]
name = "GolemianAutoclick"
version = "2.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"] }
rdev = "0.5"
native-dialog = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
windows = { version = "0.62.2" , features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell"
]}

[profile.release]
opt-level = "z"        # or "s" (sometimes faster, slightly bigger)
lto = true
codegen-units = 1
strip = "symbols"      # requires relatively recent Rust; Rust 1.91 supports it
panic = "abort"
debug = false