[package]
name = "GolemianAutoclick"
version = "2.0.1"
edition = "2021"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"] }
rdev = "0.5"
windows = { version = "0.62.2" , features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]}

[profile.release]
opt-level = "z"        # or "s" (sometimes faster, slightly bigger)
lto = true
codegen-units = 1
strip = "symbols"      # requires relatively recent Rust; Rust 1.91 supports it
panic = "abort"
debug = false