[package]
name = "GolemianAutoclick"
version = "3.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
